# my_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  bacon.toml  fly.toml  justfile
.sqlx/: query-0aeead6aef8d5181b166f1ac381b0794a01d17191e1521ab33c0731bf26f6e53.json  query-0d08158436d2726dd1c95d2431e2bdd650bc5161c6d81ac3c214ebbb4cd25b84.json  query-19212937ef5eb67304af2d9092d2cf288381e1cecf8a2b58da4d2e97e8db18f8.json  query-199f0f9b9a49f04585a07bdd1db893867cba5e89d69176c9379f5ea1697308a7.json  query-1ac2f21b9057e1104eb9568496c69df63e66b6578d2d220e832fca3ac0df0e32.json  query-38d48a5353a1b406597870929f2b83b52f038492c1a14dff8ef65d6bce98f3f5.json  query-38d93395321918d1c8f937f2cfdf1a9053fd2e285872162c65344b1ea9b52985.json  query-3a29fcb6cea7a5b0113bc423e7f5f61275cc7bf23f41674e450c55256544f3bb.json  query-3ee0fccdee973ae20ba3f8e72e665c86ef77e07c094ae31cf0260cf68cda59fd.json  query-4d0073e17f57ed489fabe016e879d2a4a5382d2d2a5218111c41cb1c8290c419.json  query-508afa4fabba1b93eb4ea9c62b9f7d81ee4d5c122986f12b55de467a0b721eb0.json  query-5376ed3265447914e686318c023c98cb284c88cc2de4ae1ce8d0c6177da7da69.json  query-56426501dd7b9c8e3454ec19be820b96581fc07f4a3673d042c0e9ac59372600.json  query-56bb28687d01e4e9a6861b2a8cd3af23445f8c9a2d5af606b227d96b805919e8.json  query-5cccd4604a31f3c379bf3545355bac2abfecd1f77066f71d8ac3e00a6b4bc3da.json  query-6304a0316c8b383d8d003592aa48fce36fac9b01626d4813b5a81736f63ace60.json  query-6fef5a1d691204737cb1a7dd194e57339f45e737cd9f60820d0f3b7ce8e31677.json  (+15 more)
src/: config.rs  db.rs  jobs.rs  main.rs  (+1 more)
(+29 files in other folders)
