[package]
name = "my_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"], git = "https://github.com/teloxide/teloxide"}
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.38"
anyhow = "1.0.93"
indoc = "2.0.5"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.4"
url = "2.5.4"
cron = "0.13.0"
chrono-tz = "0.10.0"
