[package]
name = "my_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "webhooks-axum"], git = "https://github.com/teloxide/teloxide" }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = "1.0.93"
indoc = "2.0.5"
thiserror = "2.0.4"
url = "2.5.4"
cron = "0.13.0"
chrono-tz = "0.10.0"
backon = "1.3.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.53"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [ "postgres", "macros", "runtime-tokio", "chrono", "json", "tls-native-tls" ]
